# FluxDL

./: .gitignore  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx
src/pages/: BookmarkPage.tsx  DownloadStoragePage.tsx  DownloadingPage.tsx  MainPage.tsx  SettingsPage.tsx
src/services/: appInfo.ts  storageActions.ts
