[package]
name = "fluxdl"
version = "0.1.0"
description = "FluxDL desktop application"
authors = ["FluxDL"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[lib]
name = "fluxdl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }
